tests/integration/typecheck/fail/dyn_tail_contract_in_typechecking_mode.ncl
# test.type = 'error'
# eval = 'typecheck'
# 
# [test.metadata]
# error = 'TypecheckError::ExtraDynTail'
({ a = 1 } | { a : Number ; Dyn }) : { a : Number }